caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_blueprints_keyword.caffeine
for "SLO"
  "test":
    Requiring { env: String }
    Provides { value: "x" }
